# rtype

./: TODO.plz
another_rtype_backup/: rtypeClient
another_rtype_backup/client/: CMakeCache.txt  CMakeLists.txt
another_rtype_backup/client/header/: Action.h  Arrows.h  Boss1.h  Cmd.h  Collision.h  Decor.h  DynamicLib.h  ExceptionLoaderLib.h  Explosion1.h  FileLoader.h  ILoaderLib.h  Monster2.h  Move.h  NetworkClient.h  Player3.h  RClient.h  Ship.h  SpriteEntity.h  SpriteFactory.h  ULLoaderLib.h  Weapon.h  Weapon1.h  Weapon2.h  Weapon3.h  Weapon4.h  WindowManager.h  WindowZone.h
another_rtype_backup/client/levels/: Makefile  Scenario1.xml  level1.xml  scenarioGenerator
another_rtype_backup/client/libs/: mklib.sh
another_rtype_backup/client/src/: Action.cpp  Arrows.cpp  Boss1.cpp  Cmd.cpp  Collision.cpp  Decor.cpp  DynamicLib.cpp  FileLoader.cpp  Input.cpp  KeyboardInput.cpp  Level.cpp  Monster1.cpp  Monster2.cpp  NetworkClient.cpp  Packet.cpp  Player1.cpp  Player2.cpp  Player3.cpp  Player4.cpp  RClient.cpp  Scenario.cpp  ScenarioCreator.cpp  Ship.cpp  SpriteEntity.cpp  SpriteFactory.cpp  ULLoaderLib.cpp  WLoaderLib.cpp  Weapon.cpp  Weapon1.cpp  Weapon2.cpp  Weapon3.cpp  Weapon4.cpp  WindowManager.cpp  WindowZone.cpp  main.cpp  main.level.cpp
another_rtype_backup/cmake_modules/: FindSFML.cmake
another_rtype_backup/doc/: protocole.ods  uml_client_rtype.dia  uml_server_rtype.dia
another_rtype_backup/server/: CMakeLists.txt
another_rtype_backup/server/header/: Packet.h  Player.h
another_rtype_backup/server/src/: Game.cpp  Player.cpp  Server.cpp  main.cpp
client/: Makefile  R-Type_ultime.algol  client
client/.svn/: all-wcprops  entries
client/fontTest/.svn/: all-wcprops  entries
client/fontTest/.svn/text-base/: r-typeDream.png.svn-base  r-typeDream3d.png.svn-base  r-typeDream5.png.svn-base
client/header/: DynamicLib.h  ExceptionLoaderLib.h  Input.h  KeyboardInput.h  Level.h  Move.h  NetworkClient.h  Packet.h  RClient.h  Ship.h  SpriteFactory.h  Weapon.h  Weapon1.h  Weapon2.h~  WindowManager.h
client/header/.svn/: all-wcprops  entries
client/header/.svn/text-base/: Arrows.h.svn-base  Cmd.h.svn-base  Decor.h.svn-base  Monster1.h.svn-base  (+7 more)
client/levels/.svn/: all-wcprops  entries
client/libs/: mklib.sh
client/libs/.svn/: all-wcprops  entries
client/sounds/.svn/: all-wcprops  entries
client/sprites/.svn/: all-wcprops  entries
client/src/: Action.cpp  DynamicLib.cpp  ExceptionLoaderLib.cpp  FileLoader.cpp  Move.cpp  Player4.cpp  Ship.cpp  Weapon1.cpp  Weapon2.cpp~  main.cpp  main.old.cpp
client/src/.svn/: all-wcprops  entries
doc/: uml_client_rtype.dia  uml_server_rtype.dia
doc/.svn/: all-wcprops  entries
doc/.svn/text-base/: protocole.ods.svn-base
server/: Makefile  TODO
server/.svn/: all-wcprops  entries
server/client_test/: Packet.h
server/client_test/.svn/: all-wcprops  entries
server/header/: Server.h  Victim.h
server/header/.svn/: all-wcprops  entries
server/src/: Server.cpp  Victim.cpp  main.cpp
server/src/.svn/: all-wcprops  entries
(+66 files in other folders)
